[tool.poetry]
name = "claon-admin"
version = "0.1.0"
description = ""
authors = ["Minsoo <als95.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "claon_admin"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
asyncpg = "^0.27.0"
asyncio = "^3.4.3"
dependency-injector = "^4.41.0"
greenlet = "^2.0.2"
pydantic = "^1.10.6"
nest-asyncio = "^1.5.6"
uvicorn = "^0.21.0"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.6"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
sqlalchemy = "1.4.46"
fastapi-utils = "^0.2.1"
taskipy = "^1.10.3"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
aiosqlite = "^0.18.0"

[tool.taskipy.tasks]
local = "API_ENV=local uvicorn claon_admin.main:app --host 0.0.0.0 --port 8000 --reload"
prod = "API_ENV=prod uvicorn claon_admin.main:app --host 0.0.0.0 --port 8000 --reload"
test = "API_ENV=test python3 -m pytest tests"
testCoverage = "API_ENV=test python3 -m pytest --cov-config=.coveragerc --cov=claon_admin/ --cov-report=xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
