[tool.poetry]
name = "claon-admin"
version = "0.1.0"
description = ""
authors = ["Minsoo <als95.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "claon_admin"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
asyncpg = "^0.27.0"
asyncio = "^3.4.3"
dependency-injector = "^4.41.0"
greenlet = "^2.0.2"
pydantic = "^1.10.6"
nest-asyncio = "^1.5.6"
uvicorn = "^0.21.0"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.6"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
sqlalchemy = "1.4.46"
fastapi-utils = "^0.2.1"
fastapi-pagination = "^0.12.2"
taskipy = "^1.10.3"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"
email-validator = "^1.3.1"
boto3 = "^1.26.105"
passlib = "^1.7.4"
python-jose = "^3.3.0"
redis = "^4.5.4"
google-auth = "^2.17.2"
requests = "^2.28.2"
pylint = "^2.17.4"
jinja2 = "^3.1.2"
websockets = "^11.0.3"
pandas = "^2.0.1"
pytest-it = "^0.1.4"
apscheduler = "^3.10.1"
celery = "^5.2.7"

[tool.taskipy.tasks]
local = "API_ENV=local uvicorn claon_admin.main:app --host 0.0.0.0 --port 8000 --reload"
prod = "API_ENV=prod uvicorn claon_admin.main:app --host 0.0.0.0 --port 8000 --reload"
test = "API_ENV=test python3 -m pytest tests --it"
celeryLocal = "API_ENV=local celery -A claon_celery.celery worker --loglevel=info"
celeryProd = "API_ENV=prod celery -A claon_celery.celery worker --loglevel=info"
lint = "pylint --rcfile=.pylintrc --disable=R claon_admin"
testCoverage = "API_ENV=test python3 -m pytest --cov-config=.coveragerc --cov=claon_admin/ --cov-report=xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
